--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -4,10 +4,12 @@
 @import "tailwindcss";
 
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  /* max-width: 1280px; */
+  /* margin: 0 auto; */
+  /* padding: 2rem;
+  text-align: center; */
+  width: 100vw;
+  height: 100vh;
 }
 
 /* .logo {
